@@ -1,3 +1,6 @@
+Tue Jul 11 17:28:34 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
+	* src/dblib/unittests/done_handling.c: improve
+
 Tue Jul 11 17:27:26 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
 	* src/odbc/unittests/paramcore.c:
 	- fix compatibility with sybase
